kuztomize uat prd

--- a/tdc-environments-kustomize/demo/base/deployment.yaml
+++ b/tdc-environments-kustomize/demo/base/deployment.yaml
@@ -12,6 +12,6 @@ spec:
       labels:
         deployment: hello
     spec:
-      containers:q
+      containers:
       - name: the-container
         image: nginx
